- Fix GLFW include path issues by using proper CMake target linking - Replace hardcoded paths with portable CMake configuration - Add comprehensive .gitignore for C++/CMake projects - Create build.sh script for easy project building - Update README with clear installation and usage instructions - Fix ImGui API compatibility (SliderDouble -> SliderFloat) - Remove build artifacts and user-specific files - Add OpenGL deprecation warning suppression for macOS

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,114 @@
-/build/
-/out/
-/cmake-build-*/
-*.DS_Store
+# Build directories
+build/
+out/
+cmake-build-*/
+
+# CMake generated files
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+*.cmake
+!CMakeLists.txt
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+cfd2d_gui
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# ImGui configuration files
+imgui.ini
+
+# Logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Dependency directories
+node_modules/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# Temporary files
+*.tmp
+*.temp
+
+# Backup files
+*.bak
+*.backup
+
+# Simulation output files
+*.vtk
+*.vtu
+*.pvd
+*.csv
+*.dat
+
+# Profiling data
+*.prof
+*.gprof
+
+# Core dumps
+core
+core.*
+
+# Valgrind output
+valgrind-out.txt
